--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ body {
         flex-wrap: wrap;
         flex-direction: row;
         justify-content: space-around;
+        
     }
     
     
@@ -192,6 +193,7 @@ body {
         background-color: white;
         width : 250px;
         height: 350px;
+        box-shadow: 1px 3px rgba(102, 102, 102, 0.466);
     }
 
   .cake__price{
@@ -241,6 +243,7 @@ body {
     .new__arrival{
         height: auto;
         background-color:rgb(236, 236, 236) ;
+        
     }
 
    .new__parent{
@@ -256,7 +259,6 @@ body {
     justify-content: center;
        width: 100%;
     height: 280px;
-   
    }
 
    .new__child img{
@@ -270,6 +272,7 @@ body {
     background-color: white;
     width : 180px;
     height: 300px;
+    box-shadow: 1px 3px rgba(102, 102, 102, 0.466);
    }
 
    .new__child2 img{
